# samurai

./: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
backend/: Dockerfile  Makefile  docker-compose.yml  main.py  pyproject.toml  supervisord.conf
backend/app/: config.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: bcbda80f6d30_.py
backend/app/api/routes/: login.py  report.py
backend/app/db/: action_repository.py  database.py
backend/app/models/: action.py  base.py
backend/app/utils/: logger.py
src/: middleware.js
src/app/: globals.css  layout.jsx  page.jsx
src/app/api/analytics/report/: route.js
src/app/api/auth/callback/: route.js
src/app/api/auth/login-callback/: route.js
src/app/api/auth/login-redirect/: route.js
src/app/api/linkedin/profile/: route.js
src/app/linkedin/: data1.json  data2.json  data3.json  data4.json  data5.json  data6.json  data7.json  page.jsx
src/app/login/: page.jsx
src/app/pitch-generator/: page.jsx
src/app/search/: page.jsx
src/app/settings/: page.jsx
src/components/: AppleButton.jsx  AppleCard.jsx  AppleInput.jsx  Footer.jsx  Navigation.jsx  ProtectedRoute.jsx  ThemeProvider.jsx
src/lib/: auth.js
src/services/: analytics.js  companyService.js
